Mega Menu - Show active menu-page

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -4,7 +4,7 @@
 
 .mega-menu { background: #333F48; position: absolute; width: 100%; z-index: 2; }
 
-.mega-menu__content { color: #FFF; }
+.mega-menu__content { color: #FFF; display: none; }
 
 .mega-menu__content--active { display: block; }
 
