--- a/eaton.frontend/src/global/css/etn-global.scss
+++ b/eaton.frontend/src/global/css/etn-global.scss
@@ -8,6 +8,7 @@
 
 // Import Base Styles in specific order
 // NOTE: Bootstrap 3 provides a 'normalize/reset' module.
+@import "base/fonts";
 @import "base/typography";
 
 
