--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -83,6 +83,8 @@
       .mega-menu {
         visibility: visible;
         opacity: 1;
+        overflow-y: auto;
+        height: 400px;
       }
     }
   }
