--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
 
-.container-full { height: 2000px; background: beige; }
+.container-full { height: 2000px; background: #F5F5DC; }
 
 .mega-menu { background: #333F48; position: absolute; width: 100%; z-index: 2; }
 
-.mega-menu__content { color: #FFF; display: none; }
+.mega-menu__content { color: #FFF; }
 
 .mega-menu__content--active { display: block; }
 
@@ -28,7 +28,11 @@
 
 .eaton-title { position: relative; padding: 30px 0; font-size: 20px; display: -webkit-box; display: -ms-flexbox; display: flex; }
 
-.eaton-title a { color: #FFF; text-decoration: none; cursor: pointer; }
+.eaton-title a { text-decoration: none; cursor: pointer; }
+
+.dark-theme .eaton-title a { color: #FFF; }
+
+.eaton-title a:hover, .eaton-title a:focus, .eaton-title a:active { color: #FFF; }
 
 .eaton-title__level1-link { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
