--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -79,8 +79,8 @@
   // Desktop Breakpoint
   //-----------------------------------
   @include media-desktop-and-up {
-    // opacity: 0;
-    // visibility: hidden;
+    opacity: 0;
+    visibility: hidden;
     transition: opacity 0.1s ease-in-out;
 
     &__col {
