adding right font sizes

--- a/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
+++ b/eaton.frontend/src/components/featured-topic/css/featured-topic.scss
@@ -11,10 +11,11 @@
   // TODO: check if I can upload it to base components
   h2 {
     font-size: 3.6rem;
+    font-weight: bold;
   }
 
   h4 {
-    font-size: 3rem;
+    font-size: 2.9rem;
   }
 
   &__title {
