--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -96,8 +96,9 @@ h5,
 
 .body-copy {
   background: inherit;
-  font-size: 2.5rem;
-  line-height: 3.8rem;
+  font-size: 2.2rem;
+  line-height: 3.5rem;
+  color: $color__primary-gray1;
 }
 
 .body-copy-small {
