additional changes to carousel

--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-landing-hero.scss
@@ -50,8 +50,17 @@
 }
 
 @include media-mobile-and-tablet {
+  .carousel-component {
+
+    &-slide {
+
+      &__caption {
+        top: 0;
+      }
+    }
+  }
+
   .carousel-indicators {
     bottom: 56px;
   }
-
 }
