--- a/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-primary-nav.scss
@@ -95,7 +95,7 @@
             content: '';
             position: absolute;
             height: 4px;
-            bottom: 0;
+            bottom: -4px;
             left: 5px;
             right: 5px;
             width: 90%;
