--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/mega-menu/css/mega-menu.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 991px) { .mega-menu .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
 
-.container-full { height: 2000px; background: #F5F5DC; }
+.container-full { height: 2000px; background: #F8F8F8; }
 
 .mega-menu { background: #333F48; position: absolute; width: 100%; z-index: 2; }
 
