add tile links component

--- a/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
@@ -9,3 +9,4 @@
 @import 'views/view-landing-hero';
 @import 'views/view-featured-story';
 @import "views/view-product-overview";
+@import "views/view-tile-links";
