Header - Debugging Author Mode vs Preview Mode

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -89,3 +89,16 @@
     }
   }
 }
+
+// AEM Author Mode Styles
+.aem-author-mode {
+  .eaton-header {
+    .mega-menu {
+      visibility: visible !important;
+      opacity: 1 !important;
+      &__content {
+        display: block !important;
+      }
+    }
+  }
+}
