--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -10,7 +10,7 @@
 
 .container-full {
   height: 2000px;
-  background: $color__secondary-gray3;
+  background: $color__primary-blue;
 }
 
 .mega-menu {
