Making the Mega Menu available in Author Mode

--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -91,7 +91,7 @@
 }
 
 // AEM Author Mode Styles
-.aem-author-mode {
+.aem-AuthorLayer-Edit {
   .eaton-header {
     .mega-menu {
       visibility: visible !important;
