added view 'section navigation' to link list component

--- a/eaton.frontend/src/components/link-list/css/link-list.scss
+++ b/eaton.frontend/src/components/link-list/css/link-list.scss
@@ -10,3 +10,4 @@
 @import "views/view-horizontal";
 @import "views/view-primary-nav";
 @import 'views/view-download-list';
+@import 'views/view-section-navigation';
