Title Component - Mega Menu Contents

--- a/eaton.frontend/src/global/css/base/elements/_buttons.scss
+++ b/eaton.frontend/src/global/css/base/elements/_buttons.scss
@@ -2,6 +2,12 @@
 // Styleguide - Buttons
 //-----------------------------------
 
+.button--reset {
+  border: 0;
+  background: none;
+  padding: 0;
+}
+
 .b-button {
   background: none;
   border-radius: 0;
