--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -95,6 +95,8 @@ h5__link, .heading-h5__link { font-size: 2.4rem; font-weight: bold; }
 
 .u-visible { visibility: visible; }
 
+.button--reset { border: 0; background: none; padding: 0; }
+
 .b-button { background: none; border-radius: 0; border-style: solid; display: inline-block; font-weight: bold; max-width: 600px; }
 
 .b-button--with-icon .icon { margin-left: 1rem; }
