--- a/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/views/_view-tile-links.scss
@@ -3,9 +3,21 @@
   &__element {
 
     color: $color__white;
+    margin-left: 30px;
+    margin-bottom: 60px;
+    height: 240px;
+    position: relative;
+    width: 31%;
+    padding: 0;
+
+    &:hover {
+      color: $color__white;
+      text-decoration: none;
+  }
 
     &--0 {
       background-color: $color__primary-blue;
+      margin-left: 0;
     }
 
     &--1 {
@@ -18,6 +30,7 @@
 
     &--3 {
       background-color: $color__accent-orange;
+      margin-left: 0;
     }
 
     &--4 {
@@ -30,5 +43,35 @@
 
   }
 
+  &__image {
+    width: 100%;
+  }
+
+  &__title {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin: 0;
+    padding: 10px 15px;
+
+    &--background {
+      background-color: $color__primary-gray1;
+      opacity: 0.7;
+    }
+  }
+
+  &__arrow {
+    font-size: .75em;
+  }
+}
+
+@include media-mobile-and-tablet {
+  .tile-link-component {
+
+    &__element {
+      margin-left: 0;
+      width: 100%;
+    }
+  }
 }
 
