--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -46,16 +46,28 @@
 
 .eaton-title__byline { font-size: 12px; margin-top: 15px; }
 
-.tile-link-component__element { color: #FFF; }
+.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; width: 31%; padding: 0; }
 
-.tile-link-component__element--0 { background-color: #005EB8; }
+.tile-link-component__element:hover { color: #FFF; text-decoration: none; }
+
+.tile-link-component__element--0 { background-color: #005EB8; margin-left: 0; }
 
 .tile-link-component__element--1 { background-color: #5B6770; }
 
 .tile-link-component__element--2 { background-color: #00B2A9; }
 
-.tile-link-component__element--3 { background-color: #ED8B00; }
+.tile-link-component__element--3 { background-color: #ED8B00; margin-left: 0; }
 
 .tile-link-component__element--4 { background-color: #005EB8; }
 
 .tile-link-component__element--5 { background-color: #333F48; }
+
+.tile-link-component__image { width: 100%; }
+
+.tile-link-component__title { position: absolute; bottom: 0; width: 100%; margin: 0; padding: 10px 15px; }
+
+.tile-link-component__title--background { background-color: #333F48; opacity: 0.7; }
+
+.tile-link-component__arrow { font-size: .75em; }
+
+@media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; width: 100%; } }
