--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -1,11 +1,28 @@
-<sly data-sly-use.data="../data/view-default-2-column-data.js">
+<sly data-sly-use.data="../data/view-featured-article-data.js">
 
-    <div class="eaton-list-component eaton-list-component-default-view container-fluid">
+    <div class="eaton-list-component eaton-list-component-featured-article-view container-fluid">
+        
+        <!--/* Featured Article */-->
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1">
+                <div class="featured-category-container col-sm-12">
+                    <a href="${data.featured_content.link_url}">
+                        <img src="${data.featured_content.image}" class="hidden-xs img-responsive category__image" alt="${data.featured_content.image_alt}"/>
+                        <img src="${data.featured_content.mobile_image}" class="visible-xs img-responsive category__image" alt="${data.featured_content.image_alt}"/> 
+                        <div class="featured-category--topbottompadding">
+                            <div class="category__title--font category__title--bottompadding">${data.featured_content.title}</div>
+                            <div class="category__link--font">${data.featured_content.link_text}</div>
+                            <div class="category-item-date"><em>${data.featured_content.date_text}</em></div>
+                        </div>                    
+                    </a>
+                </div>
+            </div>
+        </div>
     
         <!--/* Desktop/Tablet Layout */-->
         <div class="row hidden-xs visible-sm visible-md visible-lg">
 
-            <sly data-sly-test.colMDoffSet="${data.cards.length == 2 ? 'col-md-offset-2' : ''}" />
+            <sly sly data-sly-test.colMDoffSet="${data.cards.length == 2 ? 'col-md-offset-2' : ''}" />
 
             <div class="col-sm-10 col-sm-offset-1 ${colMDoffSet}" data-sly-list.slider="${data.cards}" role="listbox">
                 <div class="col-sm-12 ${data.cards.length == 2 ? 'col-md-5' : 'col-md-4'}">
@@ -16,7 +33,7 @@
                         <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
                             <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
                             <div class="category__link--font">${slider.link_text}</div>
-                            <p class="visible-sm category-item-date"><em>${slider.date_text}</em></p>
+                            <p class="category-item-date"><em>${slider.date_text}</em></p>
                         </div>
                     </a>
                 </div>
