--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -1,6 +1,6 @@
-.list-default { font-family: "Eaton", Arial, sans-serif; }
+.eaton-list-component { font-family: "Eaton", Arial, sans-serif; margin-bottom: 10px; }
 
-.category__image { width: 100%; max-height: 361px; }
+.category__image { width: 100%; }
 
 .category__title--font, .related-category__title--font { font-size: 1em; font-weight: bold; color: #333F48; text-transform: uppercase; }
 
@@ -8,9 +8,9 @@
 
 .category__link--font { font-size: 1.7em; font-weight: bold; }
 
-a { color: #005EB8; text-decoration: none; }
+.eaton-list-component a { color: #005EB8; text-decoration: none; }
 
-a:hover, a:active, a:visited, a:focus { color: #005EB8; text-decoration: none; }
+.eaton-list-component a:hover, .eaton-list-component a:active, .eaton-list-component a:visited, .eaton-list-component a:focus { color: #005EB8; text-decoration: none; }
 
 .carousel-indicators { position: inherit; margin: 15px auto 0; }
 
@@ -22,27 +22,32 @@ a:hover, a:active, a:visited, a:focus { color: #005EB8; text-decoration: none; }
 
 .category__title--bottompadding { padding-bottom: 15px; }
 
-.card-container--topmargin { margin-top: -5%; margin-bottom: 60px; }
-
 .header-text__topmargin { margin-top: 5%; }
 
 .category__item { min-height: 200px; }
 
+.category-item-date { padding-top: 15px; color: #333F48; }
+
 @media only screen and (max-width: 767px) { .carousel__item { min-height: 227px; }
-  .card-container--topmargin { margin-top: -15%; }
   .category__link--font { font-size: 1.4em; line-height: 1.3em; }
   .category__title--bottompadding { padding-bottom: 10px; } }
 
-@media only screen and (min-width: 768px) and (max-width: 991px) { .category-item-date { padding-top: 15px; color: #333F48; }
-  .related-category--tablet-left { float: left; }
+@media only screen and (min-width: 768px) and (max-width: 991px) { .related-category--tablet-left { float: left; }
   .related-category--tablet-right { float: right; }
   .category__item--border { border-top: 1px solid #CCD2D7; background-color: #FFF; }
   .equal-height-row { margin-bottom: 30px; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: wrap; flex-wrap: wrap; }
   .equal-height-row > div { width: 50%; display: inline-block; }
-  .card-container--topmargin { margin-top: -13%; }
   .category__item, .category__image { min-height: 263px; }
   .category__link--font { font-size: 1.5em; } }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) { .category__item { min-height: 328px; } }
 
 @media only screen and (min-width: 1200px) { .category__item { min-height: 260px; } }
+
+.featured-category--topbottompadding { padding: 30px 0; }
+
+.featured-category-container { margin-bottom: 30px; }
+
+@media only screen and (max-width: 767px) { .featured-category-container { padding: 0; margin-bottom: 30px; } }
+
+@media only screen and (min-width: 1200px) { .category__item { min-height: 280px; } }
