--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/partials/mega-menu-title.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/mega-menu/pages/partials/mega-menu-title.html
@@ -1,4 +1,5 @@
 <div class="mega-menu-title">
+  <div class="container">
     <a href="#" class="mega-menu-title__level1-link">
       <i class="mega-menu-title__icon glyphicon glyphicon-menu-left" aria-hidden="true"></i>
       <span>Level 1 Link</span>
@@ -8,4 +9,5 @@
       <span class="sr-only">Close Search</span>
       <i class="mega-menu-title__icon glyphicon glyphicon-remove" aria-hidden="true"></i>
     </button>
+  </div>
 </div>
