--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -88,11 +88,14 @@
 }
 
 // Move to Title View
-.eaton-title {
-  position: relative;
+.mega-menu-title {
   padding: 30px 0;
   font-size: 20px;
-  display: flex;
+
+  .container {
+    display: flex;
+    position: relative;
+  }
 
   a {
     text-decoration: none;
