--- a/eaton.frontend/src/components/social-links/css/social-links.scss
+++ b/eaton.frontend/src/components/social-links/css/social-links.scss
@@ -7,9 +7,7 @@
 
 .eaton-social-links {
 
-  &__eyebrow {
-    margin-bottom: 18px;
-  }
+  &__eyebrow { margin-bottom: 18px; }
 
   &__list {
     font-size: 0; // Remove spacing between elements when using "display: inline-block"
@@ -23,19 +21,26 @@
     margin-right: 18px;
   }
 
-  &__page-link {
+  &__page-link { font-size: 18px; }
 
-    font-size: 18px;
+  &__page-link-icon { font-size: 0.7em; }
 
-    &,
-    &:hover,
-    &:active {
-      color: $color__white;
+
+  // Over DARK-Background
+  //--------------
+  .dark-theme & {
+
+    &__eyebrow { color: $color__white; }
+
+    &__page-link {
+      &,
+      &:hover,
+      &:active {
+        color: $color__white;
+      }
     }
+
   }
 
-  &__page-link-icon {
-    font-size: 0.7em;
-  }
 
 }
