--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/footer/css/footer.css
@@ -1,12 +1,12 @@
 .eaton-footer-top { background: #5B6770; padding: 60px 0; }
 
-.eaton-footer-top .eaton-text-default__description, .eaton-footer-top .eaton-link-list-vertical__eyebrow, .eaton-footer-top .eaton-link-list-vertical__list-link, .eaton-footer-top .eaton-social-links__eyebrow { color: #FFF; }
-
 .eaton-footer-top .eaton-footer-top__link-list { margin-bottom: 40px; }
 
 .eaton-footer-bottom { background: #333F48; }
 
-.eaton-footer-bottom__link-list a, .eaton-footer-bottom__copyright { color: #FFF; }
+.dark-theme .eaton-footer-bottom { color: #FFF; }
+
+.dark-theme .eaton-footer-bottom a, .dark-theme .eaton-footer-bottom a:hover, .dark-theme .eaton-footer-bottom a:focus { color: #FFF; }
 
 @media screen and (max-width: 991px) { .eaton-footer-top__logo { margin-bottom: 60px; }
   .eaton-footer-top__text { margin-bottom: 120px; }
