[T3] Update Title, Text and CTAButton Components based on New Requirements / Feedback

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
@@ -1,11 +1,9 @@
 <sly data-sly-use.data="../data/view-witheyebrowandbyline-data.js">
 
-  <div class="eaton-title">
-            <h2 class="eaton-title__eyebrow">${data.eyebrow}</h2>
-            <div class="eaton-title__dash"></div>
-            <span class="eaton-title__byline">${data.byline}</span>
-   </div>
-
-
+  <div class="eaton-title eaton-title--eyebrow-and-byline">
+    <h2 class="eaton-title__eyebrow">${ data.eyebrow }</h2>
+    <h2 class="eaton-title__headline">${ data.headline }</h2>
+    <h2 class="eaton-title__byline">${ data.byline }</h2>
+  </div>
 
 </sly>
