--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
@@ -1,12 +1,7 @@
 <sly data-sly-use.data="../data/view-default-data.js">
 
-
-
-   <div class="eaton-title">
-            <h2 class="eaton-title__eyebrow">${data.eyebrow}</h2>
-            <div class="eaton-title__dash"></div>
-   </div>
-
-
+  <div class="eaton-title">
+    <h2 class="eaton-title__headline">${ data.headline }</h2>
+  </div>
 
 </sly>
