--- a/eaton.frontend/src/components/header/css/header.scss
+++ b/eaton.frontend/src/components/header/css/header.scss
@@ -35,6 +35,7 @@
       position: fixed;
       width: 100%;
       z-index: 20;
+      top: 0;
 
       .full-page-drawer,
       .header-utility-nav {
