Extract Rich text view styles into global styles (style guide)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/text/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/text/views/view-default.html
@@ -1,7 +1,7 @@
 <sly data-sly-use.data="../data/view-default-data.js">
 
   <div class="eaton-text-default">
-    <div class="eaton-text-default__content">${ data.text @ context = 'html' }</div>
+    <div class="eaton-text-default__content rich-text-container">${ data.text @ context = 'html' }</div>
   </div>
 
 </sly>
