--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -118,3 +118,7 @@ h5__link, .heading-h5__link { font-size: 2.4rem; font-weight: bold; }
 .b-list__item { display: inline-block; padding-bottom: 2rem; }
 
 .b-list--no-bullets { list-style-type: none; padding-left: 0; }
+
+.dark-theme .rich-text-container__content { color: #FFF; }
+
+.dark-theme .rich-text-container__content h2, .dark-theme .rich-text-container__content h3, .dark-theme .rich-text-container__content h4, .dark-theme .rich-text-container__content h5, .dark-theme .rich-text-container__content h6 { color: #FFF; }
