--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-tile-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-tile-links.html
@@ -1,8 +1,11 @@
 <sly data-sly-use.data="../data/view-tile-links-multiple-data.js">
     <div class="tile-link-component container">
         <div class="row" data-sly-list.tile="${data}">
-            <a class="col-xs-12 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" href="${tile.link}">
-                <img class="tile-link-component__image" data-sly-test="${tile.image}" src="${tile.image}" alt="${tile.alt}"/>
+            <a class="col-xs-12 col-sm-6 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${!tile.image}" href="${tile.link}">
+                <h2 class="tile-link-component__title ${tile.image != '' ? 'tile-link-component__title--background' : ''  }">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
+            </a>
+            <a class="col-xs-12 col-sm-6 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${tile.image}" href="${tile.link}"
+               style="background:url('${tile.image @ context='styleString'}') center no-repeat; background-size: cover">
                 <h2 class="tile-link-component__title ${tile.image != '' ? 'tile-link-component__title--background' : ''  }">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
             </a>
         </div>
