--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link-list/css/title-text-image-link-list.css
@@ -46,7 +46,7 @@
 
 .eaton-title__byline { font-size: 12px; margin-top: 15px; }
 
-.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; width: 31%; padding: 0; }
+.tile-link-component__element { color: #FFF; margin-left: 30px; margin-bottom: 60px; height: 240px; position: relative; padding: 0; }
 
 .tile-link-component__element:hover { color: #FFF; text-decoration: none; }
 
@@ -70,4 +70,6 @@
 
 .tile-link-component__arrow { font-size: .75em; }
 
-@media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; width: 100%; } }
+@media screen and (max-width: 991px) { .tile-link-component__element { margin-left: 0; } }
+
+@media screen and (min-width: 992px) { .tile-link-component__element { width: 31%; } }
