--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-2-column-control/static_grid-2-column-control.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-2-column-control/static_grid-2-column-control.html
@@ -3,23 +3,23 @@
 </sly>
 
 
-<div class="eaton-grid-2-column-control">
+<div class="eaton-grid-control eaton-grid-control--2-col">
   <div class="container">
     <div class="row">
-      <!--/* Include Column One */-->
-      <div class="col-xs-12
-        ${properties.view === 'is-half' ? 'col-md-6' : 'col-md-12'}
-        ${properties.view === 'is-7' ? 'col-md-7' : 'col-md-12'}
-        ${properties.view === 'is-two-third' ? 'col-md-8' : 'col-md-12'}">
-          Column One
+      <!--/* Include Parsys - Column One */-->
+      <div class="col-xs-12 eaton-grid-control__column
+        ${properties.view == 'is-half' ? 'col-md-6' : null}
+        ${properties.view == 'is-7' ? 'col-md-7' : null}
+        ${properties.view == 'is-two-third' ? 'col-md-8' : null}">
+          <sly data-sly-resource="${@path='col1-par', resourceType='wcm/foundation/components/parsys'}" />
       </div>
 
-      <!--/* Include Column Two */-->
-      <div class="col-xs-12
-        ${properties.view === 'is-half' ? 'col-md-6' : 'col-md-12'}
-        ${properties.view === 'is-7' ? 'col-md-5' : 'col-md-12'}
-        ${properties.view === 'is-two-third' ? 'col-md-4' : 'col-md-12'}">
-          Column Two
+      <!--/* Include Parsys - Column Two */-->
+      <div class="col-xs-12 eaton-grid-control__column
+        ${properties.view == 'is-half' ? 'col-md-6' : null}
+        ${properties.view == 'is-7' ? 'col-md-5' : null}
+        ${properties.view == 'is-two-third' ? 'col-md-4' : null}">
+          <sly data-sly-resource="${@path='col2-par', resourceType='wcm/foundation/components/parsys'}" />
       </div>
 
     </div>
