Starting work on Category Hero view for the TTIL List component.

--- a/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
@@ -10,3 +10,4 @@
 @import 'views/view-featured-story';
 @import "views/view-product-overview";
 @import "views/view-tile-links";
+@import "views/view-category-hero";
